--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -31,14 +31,6 @@ header {
     background-color:none;
 }
 
-#logo{
-
-}
-
-#name{
-    color:rgb(89, 164, 255);
-}
-
 #site_name {
     display: flex;
     flex-direction: row;
@@ -63,10 +55,22 @@ header {
     justify-content: center;
 }
 
+#fifth-button{
+    width: max-content;
+    aspect-ratio: 1/1;
+    font-size: 300%;
+    position: static;
+    margin-top: 20px;
+    margin-right: 20px;
+}
 
 .buttflex {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    margin-left: 20%;
+    margin-right: 20%;
+    gap: 4%;
+    margin-bottom: 3%;
 }
 
 .main_buttons{
@@ -79,7 +83,7 @@ header {
     transition: background-color 0.3s ease;
 }
 
-button:hover {
+.main_buttons:hover {
     background-color: gray;
     cursor: pointer;
 }
@@ -113,36 +117,34 @@ button:hover {
     color: black;
 }
 
-.carousel {
-    margin-left: 20%;
-    margin-right: 20%;
+#carousel {
+    width: max-content;
     margin-top: 5%;
     padding: 4%;
-    background-color: rgb(237, 196, 62);
     border-radius: 10px;
     overflow: hidden;
     position: relative;
-    padding-left: 13%;
-    padding-right: 13%;
+    padding-left: 5%;
+    padding-right: 5%;
     aspect-ratio: 16/9;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .slide {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: nowrap;
-    margin-bottom: 20px;
     width: 100%;
-    gap: 7%;
-    position: absolute;
-    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-    height: fit-content;
-    overflow: hidden;
-    padding-right: 5%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
     opacity: 0;
+    position: absolute;
     transform: translateX(100%);
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
 
 .slide.active {
