--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(31, 2, 84); 
@@ -12,44 +11,35 @@ header {
     margin-top: -1%;
     margin-left: -1%;
     margin-right: -1%;
-    width: 100%;
 }
 
 #navbar_left{
-    font-size: 0.1%;
+    border-radius: 3px;
+    margin-right: 1%;
+    font-size: larger;
+    position: absolute;
+    left: 2%;
+    top: 2%;
 }
 
 #nav_left_butto{
-    font-size: 100%;
-}
-
-#logo{
-
-}
-
-#name{
-    color:rgb(89, 164, 255);
+    text-decoration: none;
 }
 
 #site_name {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-left: 1%;
-    margin-right: 71%;
-}
-
-#sub_button{
-    margin-right: 2%;
+    margin-left: 10%;
 }
 
 #navbar_right{
     font-size: 240%;
     
-}
-#nav_right_button{
+  }
+  #nav_right_button{
     font-size: 100%;
-}
+  }
 
 #mainheader {
     font-size: 400%;
@@ -91,7 +81,6 @@ header {
     border: none;
     height: fit-content;
     width: max-content;
-    background-color: white;
     font-size: 150%;
     border-radius: 10px;
     transition: background-color 0.3s ease;
@@ -116,7 +105,6 @@ header {
     background-color: black;
     color: white;
 }
-
 .blueButton {
     background-color: rgb(31, 2, 84);
     color: white;
@@ -124,6 +112,17 @@ header {
 
 .blueButton:hover {
     background-color: rgb(109, 54, 211);
+}
+
+.blackButton {
+    background-color: black;
+    color: white;
+}
+
+.blackButton:hover {
+    background-color: gray;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .whiteButton {
@@ -205,8 +204,6 @@ header {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: white;
-    color: black;
     font-size: 2em;
     border: none;
     padding: 8px;
@@ -223,10 +220,6 @@ header {
 
 #next {
     right: 5%;
-}
-
-#prev:hover, #next:hover {
-    background-color: rgb(255, 225, 128);
 }
 
 .box-navbutt {
