--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -5,7 +5,6 @@ body {
     color: white;
 }
 
-
 header {
     display: flex;
     flex-direction: row;
@@ -16,25 +15,23 @@ header {
 }
 
 #navbar_left{
-    margin-left: 1%;
-    padding: 0.5%;
-    border: solid;
-    padding-left: 0.7%;
-    padding-right: 0.7%;
     border-radius: 3px;
     margin-right: 1%;
     font-size: larger;
+    position: absolute;
+    left: 1.3%;
+    top: 1.3%;
 }
 
 #nav_left_butto{
     text-decoration: none;
-    background-color:none;
 }
 
 #site_name {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-left: 10%;
 }
 
 #mainheader {
@@ -77,7 +74,6 @@ header {
     border: none;
     height: fit-content;
     width: max-content;
-    background-color: white;
     font-size: 150%;
     border-radius: 10px;
     transition: background-color 0.3s ease;
@@ -112,9 +108,26 @@ header {
     background-color: rgb(109, 54, 211);
 }
 
+.blackButton {
+    background-color: black;
+    color: white;
+}
+
+.blackButton:hover {
+    background-color: gray;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
 .whiteButton {
     background-color: white;
     color: black;
+}
+
+.whiteButton:hover {
+    background-color: gray;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 #carousel {
@@ -191,8 +204,6 @@ header {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: white;
-    color: black;
     font-size: 2em;
     border: none;
     padding: 8px;
@@ -209,10 +220,6 @@ header {
 
 #next {
     right: 5%;
-}
-
-#prev:hover, #next:hover {
-    background-color: rgb(255, 225, 128);
 }
 
 .box-navbutt {
