--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -26,11 +26,23 @@ header {
     text-decoration: none;
 }
 
+#sub_button{
+    position: absolute;
+    right: 6%;
+    top: 1,3%;
+}
+#navbar_right
+{
+    position: absolute;
+    right: 1.3%;
+    top: 1,3%;
+}
+
 #site_name {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin-left: 10%;
+    text-align: center;
+    margin-left: 7%;
 }
 
 #mainheader {
