--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -8,9 +8,6 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: -1%;
-    margin-left: -1%;
-    margin-right: -1%;
 }
 
 #navbar_left{
@@ -19,30 +16,37 @@ header {
     font-size: larger;
     position: absolute;
     left: 1.3%;
-    top: 1.3%;
+    top: 1.8%;
+}
+
+#name{
+    margin: none;
 }
 
 #nav_left_butto{
     text-decoration: none;
 }
 
+#site_name {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    text-align: center;
+    margin-left: 7%;
+    top:0.3%;
+}
+
 #sub_button{
     position: absolute;
     right: 6%;
-    top: 1,3%;
+    top: 0.3%;
 }
+
 #navbar_right
 {
     position: absolute;
     right: 1.3%;
-    top: 1,3%;
-}
-
-#site_name {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    margin-left: 7%;
+    top: 2%;
 }
 
 #mainheader {
