--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -10,13 +10,18 @@ header {
     align-items: center;
 }
 
+#logo
+{
+    margin-top: 18%;
+}
+
 #navbar_left{
     border-radius: 3px;
     margin-right: 1%;
     font-size: larger;
     position: absolute;
     left: 1.3%;
-    top: 1.8%;
+    top: 3%;
 }
 
 #name{
@@ -46,7 +51,7 @@ header {
 {
     position: absolute;
     right: 1.3%;
-    top: 2%;
+    top: 3%;
 }
 
 #mainheader {
