--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -52,6 +52,15 @@ header {
     position: absolute;
     right: 1.3%;
     top: 3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
+
+#nav_right_button
+{
+    padding: 5px, 5px, 5ox, 5px;
 }
 
 #mainheader {
