--- a/Preparation3/src/profile.css
+++ b/Preparation3/src/profile.css
@@ -13,7 +13,7 @@ body, html {
 }
 
 .buttons {
-    width: 20%; 
+    width: 30%; 
     height: 100vh; 
     display: flex;
     flex-direction: column;
@@ -51,6 +51,7 @@ body, html {
     padding: 20px;
     background-color: #fff;
     padding-right: 7%;
+    margin-left: 5%;
 }
 
 .profile_picture {
@@ -66,21 +67,16 @@ body, html {
 }
 
 .description {
-    width: 80%;
+    width: 60%;
     display: flex;
     align-items: center;  
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: blue;
     border-radius:20px;
     margin-top:20%;
     margin-bottom:20%;
-}
-
-.description p {
-    font-size: 16px;
-    line-height: 1.6;
-    color: #555;
-    margin: 0; 
+    text-align:center;
+    font-size: 150%
 }
 
 .pcontainer{
