--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -303,12 +303,13 @@ header {
 }
 
 footer {
+
     display: flex;
     flex-direction: column;
-    width: 100%;
     background-color: #263238;
-    padding: 20px 0;
     color: white;
+    width: 100%;
+    position: static;
 }
 
 .section1_footer {
@@ -319,11 +320,12 @@ footer {
     margin-bottom: 20px;
 }
 
-.section2_footerШ
+.section2_footer
 {
+    margin-top: 3%;
     display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
+    flex-direction: row;
+    margin-bottom: 1%;
 }
 
 .section1_footer .col, .section2_footer .col {
