--- a/Preparation3/frontend/src/styles/profile.css
+++ b/Preparation3/frontend/src/styles/profile.css
@@ -3,29 +3,39 @@ body, html {
     padding: 0;
     height: 100%;
     font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #1E90FF, #FFFFFF);
 }
 
 .container {
     display: flex;
-    flex-direction: row; 
-    height: 100vh; 
+    flex-direction: row;  
     justify-content: space-between;
+    width: 100%; /* Увеличете ширината на контейнера */
 }
 
 .buttons {
-    width: 30%; 
-    height: 100vh; 
+    width: 20%; 
+    height: 94.5vh;
     display: flex;
     flex-direction: column;
-    gap: 8%;
-    justify-content: flex-start;
+    justify-content: space-around;
     padding: 20px;
     background-color: #f4f4f4;
     border-right: 1px solid #ccc;
 }
 
+.theme-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.theme-button i {
+    font-size: 20px;
+    margin-bottom: 3px;
+}
+
 .buttons button {
-    margin-bottom: 10px;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -40,48 +50,79 @@ body, html {
     background-color: #0056b3;
 }
 
-.profile {
-    font-size: 60px;
-    font-weight: bold; 
-    height: 100vh; 
+.pcontainer {
     display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
+    flex-direction: column; /* Подредете профила и описанието хоризонтално */
+    justify-content: flex-start;
+    align-items: center;
+    width: 30%; /* Увеличете ширината на контейнера */
     padding: 20px;
-    background-color: #fff;
-    padding-right: 7%;
-    margin-left: 5%;
+    /*background-color: rgb(4, 4, 4 , 0.2);*/
+    border-radius: 6px;
+}
+
+.content {
+    display: flex;
+    flex-direction: row; /* Подредете профила и описанието хоризонтално */
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.profile {
+    font-size: 35px;
+    font-weight: bold;  
+    padding: 20px;
+    text-align: center;
 }
 
 .profile_picture {
-    font-size: 200px;
+    font-size: 120px;
     color: #007bff;
+    text-align: center;
+    margin-top: -2%;
 }
 
 .username {
-    font-size: 55px;
-    margin-top: 20px;
+    font-size: 35px;
     font-weight: bold;
-    color: #333;
+    text-align: center;
 }
 
 .description {
-    width: 60%;
-    display: flex;
-    align-items: center;  
-    padding: 20px;
-    background-color: blue;
-    border-radius:20px;
-    margin-top:20%;
-    margin-bottom:20%;
-    text-align:center;
-    font-size: 150%
+    flex: 1; /* Увеличете ширината на описанието, за да заеме останалото пространство */
+    font-size: 18px;
+    line-height: 1.5;
+    background-color: #007bff;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 4%;
 }
 
-.pcontainer{
-    display:flex;
-    flex-direction:row;
-    margin-right: 8%;
-    justify-content: space-between;
+.description-text {
+    font-size: 22px;
+    width: 100%; /* Уверете се, че текстът заема цялата ширина на описанието */
 }
+
+.gluposti {
+    width: 85%;
+    font-size: 16px;
+    line-height: 1.5;
+    background-color: #007bff;
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: 7.5%;
+    margin-right: 7.5%;
+    margin-top: 3%;
+    
+}
+
+.content1{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 5%;
+    gap: 10%;
+}
+
+
