--- a/Preparation3/src/about.css
+++ b/Preparation3/src/about.css
@@ -16,20 +16,23 @@ h1{
     background-color: blue;
     margin: 3%;
     border-radius: 15px;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 3%;
+    padding-bottom: 3%;
 }
 .img{
     display: flex;
     justify-content: start;
-    width: 40%;
+    width: 45%;
     height: auto;
-    margin-left: 3%;
+    margin-left: 2%;
+    border-radius: 15px;
 }
 .flexm{
     display: flex;
     justify-content: start;
+    margin-left: -17%;
     font-size: x-large;
+    width: 65%;
 }
 .flexmt{
     font-size: xx-large;
