--- a/Preparation3/frontend/src/styles/index.css
+++ b/Preparation3/frontend/src/styles/index.css
@@ -41,6 +41,20 @@ header {
     top: 0.3%;
 }
 
+.search-container
+{
+    position: absolute;
+    top: 0.5%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.search-container
+{
+    height: 100%;
+    width: 100%;
+}
+
 #sub_button {
     position: absolute;
     right: 6%;
@@ -58,7 +72,7 @@ header {
 }
 
 #nav_right_button {
-    padding: 5px, 5px, 5ox, 5px;
+    padding: 5px, 5px, 5px, 5px;
 }
 
 #mainheader {
@@ -68,7 +82,8 @@ header {
 
 #forehead {
     text-align: center;
-    font-size: 200%;
+    font-size: 300%;
+    margin-top: 5%;
 }
 
 #second-box {
@@ -83,9 +98,9 @@ header {
     width: max-content;
     aspect-ratio: 1/1;
     font-size: 300%;
-    position: static;
-    margin-top: 20px;
-    margin-right: 20px;
+    position: absolute;
+    top: 0.5%;
+    left: 17%;
 }
 
 .buttflex {
